# bce-exchange-mcp

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/database/: Cargo.toml
crates/database/in_memory/: Cargo.toml
crates/database/in_memory/src/: in_memory.rs
crates/database/sqlite/: Cargo.toml
crates/database/sqlite/migrations/: 20250810162329_initial_schema.sql
crates/database/sqlite/src/: migration_manager.rs  sqlite.rs
crates/database/src/: database.rs
crates/mcp_primitives/: Cargo.toml
crates/mcp_primitives/src/: tools.rs
crates/provider/: Cargo.toml
crates/provider/src/: provider.rs
src/: main.rs
