[package]
name = "bce-exchange-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
context-server.workspace = true
context-server-utils.workspace = true
http-client.workspace = true
http-client-reqwest.workspace = true
bce_exchange_database_sqlite.workspace = true
bce_exchange_mcp_primitives.workspace = true
bce_exchange_provider.workspace = true
serde_json.workspace = true
tokio.workspace = true

[workspace]
resolver = "3"
members = [
    "crates/client",
    "crates/database",
    "crates/database/in_memory",
    "crates/database/sqlite",
    "crates/mcp_primitives",
    "crates/provider",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
context-server = { git = "https://github.com/fdionisi/context-server", rev = "efa9f9235f9b48e125bb63f8599fc76406d823d7" }
context-server-utils = { git = "https://github.com/fdionisi/context-server", rev = "efa9f9235f9b48e125bb63f8599fc76406d823d7" }
http-client = { git = "https://github.com/fdionisi/http-client", rev = "527795f932b5ecbbed3bbcf8f1ac709ee6ef8314" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", rev = "527795f932b5ecbbed3bbcf8f1ac709ee6ef8314" }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }

# local
bce_exchange_client = { path = "crates/client" }
bce_exchange_database = { path = "crates/database" }
bce_exchange_database_in_memory = { path = "crates/database/in_memory" }
bce_exchange_database_sqlite = { path = "crates/database/sqlite" }
bce_exchange_mcp_primitives = { path = "crates/mcp_primitives" }
bce_exchange_provider = { path = "crates/provider" }
