[package]
name = "bce_exchange_database_in_memory"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/in_memory.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bce_exchange_client.workspace = true
bce_exchange_database.workspace = true
chrono.workspace = true
tokio.workspace = true
